--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta http-equiv="refresh" content="0;URL='/StaticBlog/'" />
 </head>
 <body>
-Redirecting you to <a href="/StaticBlog/">/StaticBlog/</a>...
+Redirecting you to <a href="/StaticBlog/">https://meesong.github.io/StaticBlog/</a>...
 </body>
 </html>
