modify robots and index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta http-equiv="refresh" content="0;URL='/StaticBlog/'" />
 </head>
 <body>
-Redirecting you to <a href="/StaticBlog/">https://meesong.github.io/StaticBlog/</a>...
+Redirecting you to <a href="/StaticBlog/">MeeSong's Blog</a>...
 </body>
 </html>
