--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;URL='/StaticBlog/'" />
+    <meta http-equiv="refresh" content="0;URL='https://mirokaku.github.io/Blog/'" />
 </head>
 <body>
-Redirecting you to <a href="/StaticBlog/">MeeSong's Blog</a>...
+Redirecting you to <a href="https://mirokaku.github.io/Blog/">Miro's Blog</a>...
 </body>
 </html>
