--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;URL='https://mirokaku.github.io/blog/'" />
+    <meta http-equiv="refresh" content="0;URL='https://mirokaku.github.io/'" />
 </head>
 <body>
-Redirecting you to <a href="https://mirokaku.github.io/blog/">Miro's Blog</a>...
+Redirecting you to <a href="https://mirokaku.github.io/">Miro's Blog</a>...
 </body>
 </html>
